--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,6 @@ torchcrepe==0.0.20
 ffmpy==0.3.1
 --extra-index-url https://download.pytorch.org/whl/cu117
 torch==1.13.1+cu117
-
 scikit-learn==1.3.0
 tensorboardX
 tensorboard
@@ -48,26 +47,18 @@ Cython
 pytube
 lightning==2.0.8
 samplerate
-
-#tts
 transformers==4.32.1
 num2words
 sentencepiece
 speechbrain==0.5.15
-accelerate==0.22.0 # required by device_map
+accelerate==0.22.0 
 edge-tts==6.1.8
-# silero # omegaconf>=2.1.0 not compatible with fairseq
-
-#required by vits
 monotonic-align
 Unidecode==1.1.1
 phonemizer==2.2.1
-
-#required by chat
-llama-cpp-python>=0.1.79 #support for gguf
+llama-cpp-python>=0.1.79 
 sounddevice
 emoji
-pyaudio==0.2.13
 SpeechRecognition
 vosk
 sumy==0.11.0
